resources/dsaas-stg/dsaas-preview/core-api-no-cors.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: core
  name: core-api-no-cors
spec:
  host: prod-preview.openshift.io
  path: /api
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: core
    weight: 100
  wildcardPolicy: None
